--- a/index.html
+++ b/index.html
@@ -117,6 +117,6 @@
       <div class="tasks"></div>
       <div class="clearAll">Clear All</div>
     </div>
-    <script src="./ch.js"></script>
+    <script src="./main.js"></script>
   </body>
 </html>
