--- a/index.html
+++ b/index.html
@@ -5,102 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        margin: 0;
-        box-sizing: border-box;
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-      }
-
-      .container {
-        width: 60%;
-        margin: 30px auto;
-        display: block;
-      }
-
-      .container img {
-        margin: 0 auto;
-        display: block;
-        margin-bottom: 20px;
-      }
-      .form {
-        background-color: #e8e8e3;
-        padding: 20px;
-        border-radius: 8px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-      }
-
-      .form .input {
-        width: 80%;
-        border: none;
-        outline: none;
-        height: 40px;
-        border-radius: 8px;
-        font-size: 19px;
-        padding: 0 10px;
-      }
-
-      .form .add {
-        border: none;
-        background-color: red;
-        color: white;
-        padding: 10px;
-        border-radius: 8px;
-        height: 40px;
-        width: 15%;
-        font-weight: bold;
-        cursor: pointer;
-      }
-      .form .add:hover {
-        background-color: rgb(255, 64, 64);
-      }
-      .tasks {
-        margin-top: 50px;
-        background-color: #e8e8e3;
-        padding: 20px;
-        border-radius: 8px;
-        padding: 20px;
-        min-height: 30px;
-      }
-      .tasks .task {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        background-color: white;
-        padding: 10px;
-        font-size: 20px;
-        font-weight: 500;
-        border-radius: 8px;
-      }
-      .tasks .task:not(:last-child) {
-        margin-bottom: 17px;
-      }
-
-      .tasks .task .delete {
-        background-color: red;
-        color: white;
-        border: none;
-        padding: 5px;
-        border-radius: 8px;
-        height: 25px;
-        width: 10%;
-        cursor: pointer;
-      }
-      .clearAll {
-        background-color: red;
-        margin: 20px 0;
-        padding: 10px;
-        border-radius: 8px;
-        color: white;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        font-size: 19px;
-        cursor: pointer;
-      }
-    </style>
+    <link rel="stylesheet" href=".//style.css" />
   </head>
   <body>
     <div class="container">
